kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdk
spec:
  selector:
    app: sdk
  ports:
    - protocol: TCP
      port: 7062
      targetPort: 7062
