kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdk
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sdk.djnd.si
        - sdk.danesjenovdan.si
      secretName: sdk-tls
  rules:
    - host: sdk.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdk
                port:
                  number: 7062
    - host: sdk.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdk
                port:
                  number: 7062
